fix: remove row-gap in .sobre-techpro-grid RWD

--- a/02-tech-pro/css/main.css
+++ b/02-tech-pro/css/main.css
@@ -199,6 +199,7 @@ img {
         grid-template-rows: unset;
         grid-template-columns: repeat(2, 1fr);
         column-gap: var(--separation);
+        row-gap: unset;
     }
 }
 
